client/css/main.css
/*********************************************************************************/
/* Custom CSS                                                                    */
/*********************************************************************************/
/
#CharHeaderLine1 > div, #CharHeaderLine2 > div, #CharHeaderLine3 > div{
	display: inline-block;
	width: 20%;
}
#PFCharHeader > div{
	display: inline-block;
}

#ClassesAndLevels > span, input, #AbilityScores, #PFCharHeader{
	display: inline-block;
}

#sidebar{
	margin: 0px;
	padding: 0px;
}

#CharHeaderInfoDiv{
	background-color: #e6e6e6;
	padding: 1%;
	border: 1px solid black;
}

/*
.col-md-4
{
	margin: 0px;
	color: #9d9d9d;
	display: inline-block;
	width: 20%;
}
*/
.ExpandableMenu [type = "checkbox"]{
	size: 50%;
	
}







/*********************************************************************************/
/* Copyright                                                                     */
/*********************************************************************************/
	
	#copyright
	{
		position: relative;
		padding: 3em 0em;
		text-align: center;
		color: #877850;
		background: #62573b;
	}
	
	#copyright .container
	{
	}
	
	#copyright a
	{
		text-decoration: none;
		color: #877850;
	}

